--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -1,8 +1,33 @@
 <h1>Welcome to {{hotelName}}</h1>
 
-<div [hidden]="!hideRooms">
+<div [hidden]="hideRooms">
     Number of Rooms
     <div [innerText]="numberOfRooms"></div>
 </div>
+
+<div *ngIf="rooms.availableRooms > 0">
+    Rooms List
+    <table>
+        <tr>
+            <th>Index</th>
+            <th>Even/Odd</th>
+            <th>Room Number</th>
+            <th>Room Type</th>
+            <th>Room Price</th>
+            <th>Room Amenities</th>
+            <th>Checkin Time</th>
+        </tr>
+        <tr *ngFor="let room of roomList; let e=even; let o=odd; let i=index">
+            <td>{{i}}</td>
+            <td>{{e ? "Even": "Odd"}}</td>
+            <td>{{room.roomNumber}}</td>
+            <td>{{room.roomType}}</td>
+            <td>{{room.price}}</td>
+            <td>{{room.amenities}}</td>
+            <td>{{room.checkinTime}}</td>
+        </tr>
+    </table>
+</div>
+
 
 <button (click)="toggle()">Toggle</button>
