[learn]: directives(attribute): ngClass and ngStyle

--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -2,7 +2,11 @@
 
 <div [hidden]="hideRooms">
     Number of Rooms
-    <div [innerText]="numberOfRooms"></div>
+    <div 
+    [ngStyle]="{
+        'color': rooms.availableRooms > 0 ? 'green' : 'red'
+    }"
+    [innerText]="numberOfRooms"></div>
 </div>
 
 <div *ngIf="rooms.availableRooms > 0">
@@ -17,7 +21,9 @@
             <th>Room Amenities</th>
             <th>Checkin Time</th>
         </tr>
-        <tr *ngFor="let room of roomList; let e=even; let o=odd; let i=index">
+        <tr 
+        [ngClass]="e ? 'even' : 'odd'"
+        *ngFor="let room of roomList; let e=even; let o=odd; let i=index">
             <td>{{i}}</td>
             <td>{{e ? "Even": "Odd"}}</td>
             <td>{{room.roomNumber}}</td>
@@ -29,5 +35,11 @@
     </table>
 </div>
 
+<div [ngSwitch]="color">
+    <div *ngSwitchCase="'yellow'">yellow</div>
+    <div *ngSwitchCase="'red'">red</div>
+    <div *ngSwitchCase="'blue'">blue</div>
+    <div *ngSwitchDefault>No color is correct</div>
+</div>
 
 <button (click)="toggle()">Toggle</button>
