--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -14,33 +14,7 @@
 <button (click)="toggle()">Toggle</button>
 
 <!-- Structural and Attribute directives Directives -->
-<div *ngIf="rooms.availableRooms > 0">
-    Rooms List
-    <table class="table">
-        <tr>
-            <th>Index</th>
-            <th>Even/Odd</th>
-            <th>Room Number</th>
-            <th>Room Type</th>
-            <th>Room Price</th>
-            <th>Room Amenities</th>
-            <th>Checkin Time</th>
-            <th>Rating</th>
-        </tr>
-        <tr 
-        [ngClass]="e ? 'even' : 'odd'"
-        *ngFor="let room of roomList; let e=even; let o=odd; let i=index">
-            <td>{{i}}</td>
-            <td>{{e ? "Even": "Odd"}}</td>
-            <td>{{room.roomNumber}}</td>
-            <td>{{room.roomType}}</td>
-            <td>{{room.price | currency :'EUR'}}</td>
-            <td>{{room.amenities | lowercase }}</td>
-            <td>{{room.checkinTime | date :'medium' }}</td>
-            <td>{{room.rating | number: '2.4-5' }}</td>
-        </tr>
-    </table>
-</div>
+<app-rooms-list [rooms]="roomList"></app-rooms-list>
 
 <!-- structural directive -->
 <div [ngSwitch]="color">
