[learn]: afterViewInit, static property, viewChild

--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -1,5 +1,7 @@
 <!-- Template syntax - Data binding, interpolation, property binding, event binding -->
-<h1>Welcome to {{hotelName}}</h1>
+<!-- <h1>Welcome to {{hotelName}}</h1> -->
+
+<app-header></app-header>
 
 <div [hidden]="hideRooms">
     Number of Rooms
