--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -2,6 +2,10 @@
 <!-- <h1>Welcome to {{hotelName}}</h1> -->
 
 <app-header></app-header>
+<app-header></app-header>
+<app-header></app-header>
+<app-header></app-header>
+<app-header></app-header>
 
 <div [hidden]="hideRooms">
     Number of Rooms
