--- a/Angular/hotelinventoryapp/src/app/app.component.html
+++ b/Angular/hotelinventoryapp/src/app/app.component.html
@@ -4,8 +4,13 @@
 
 <h1 #name></h1>
 
-<app-rooms></app-rooms>
+<!-- <app-rooms></app-rooms> -->
 
+<app-container>
+  <app-rooms></app-rooms>
+  <app-employee></app-employee>
+  This is from ng-content
+</app-container>
 <!-- <div>
   <ng-template #user></ng-template>
 </div> -->
