--- a/Angular/hotelinventoryapp/src/app/container/container.component.html
+++ b/Angular/hotelinventoryapp/src/app/container/container.component.html
@@ -1,1 +1,3 @@
-<p>container works!</p>
+<ng-content select="app-employee"></ng-content>
+<ng-content></ng-content>
+<ng-content select="app-rooms"></ng-content>
