--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -13,20 +13,28 @@ Number of Rooms
 [innerText]="numberOfRooms">
 </div>
 
-<div *ngIf="hideRooms">
-    <!-- Structural and Attribute directives Directives -->
-    <app-rooms-list [rooms]="roomList" [title]="title" (selectedRoom)="selectRoom($event)"></app-rooms-list>
-</div>
-
 <!-- Event binding -->
 <button (click)="toggle()">Toggle</button>
 
-<div *ngIf="selectedRoom">
+<button (click)="editRoom()">Edit Room</button>
+
+<button (click)="deleteRoom()">Delete Room</button>
+
+<!-- <div *ngIf="selectedRoom">
     {{ selectedRoom | json }}
-</div>
+</div> -->
+
+<h1>
+    {{totalBytes}}
+</h1>
 
 <div>
     <button class="btn btn-warning" (click)="addRoom()"> Add Room </button>
+</div>
+
+<div *ngIf="hideRooms">
+    <!-- Structural and Attribute directives Directives -->
+    <app-rooms-list [rooms]="roomList" [title]="title" (selectedRoom)="selectRoom($event)"></app-rooms-list>
 </div>
 
 <!-- structural directive -->
