--- a/Angular/hotelinventoryapp/src/app/app.component.html
+++ b/Angular/hotelinventoryapp/src/app/app.component.html
@@ -6,11 +6,11 @@
 
 <app-rooms></app-rooms>
 
-<!-- <app-container>
+<app-container>
   <app-rooms></app-rooms>
   <app-employee></app-employee>
   This is from ng-content
-</app-container> -->
+</app-container>
 <!-- <div>
   <ng-template #user></ng-template>
 </div> -->
