[learn]: shareReplay rxjs operator

--- a/Angular/subjects/src/app/components/one/one.component.html
+++ b/Angular/subjects/src/app/components/one/one.component.html
@@ -1,7 +1,7 @@
 <section>
-    <form action="" [formGroup]="userForm" (ngSubmit)="onSubmit()">
-        <input type="text" name="name" placeholder="Enter your name" formControlName="name" >
-        <input type="number" name="age" placeholder="Enter your age" formControlName="age">
-        <button [disabled]="userForm.invalid">Submit</button>
+    <form action="" [formGroup]="chatForm" (ngSubmit)="onSubmit()">
+        <input type="text" name="name" placeholder="Enter the message" formControlName="text" >
+        <input type="date" name="age" placeholder="Enter the date" formControlName="date">
+        <button [disabled]="chatForm.invalid">Submit</button>
     </form>
 </section>
