--- a/Angular/subjects/src/app/components/two/two.component.html
+++ b/Angular/subjects/src/app/components/two/two.component.html
@@ -1,4 +1,18 @@
 <div>
-    <h1>You are {{name}}</h1>
-    <h3>You are <b>{{age}}</b> years old</h3>
+    <table>
+        <thead>
+            <tr>
+                <!-- <th>Id</th> -->
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let chat of allChatsHistory">
+                <!-- <td>{{user.id}}</td> -->
+                <td>{{chat.text}}</td>
+                <td>{{chat.date}}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
