[learn]: Routing set up and Angular material Schematics: nav-bar

--- a/Angular/hotelinventoryapp/src/app/app.component.html
+++ b/Angular/hotelinventoryapp/src/app/app.component.html
@@ -1,16 +1,23 @@
-<p>
+<!-- <p>
   Hello World!
 </p>
 
 <h1 #name></h1>
 
-<app-rooms></app-rooms>
+<app-rooms></app-rooms> -->
 
-<app-container>
+<!-- <a routerLink="/employee">Employee</a>
+<a routerLink="/rooms">Rooms</a> -->
+
+<app-app-nav></app-app-nav>
+
+<!-- <router-outlet></router-outlet> -->
+
+<!-- <app-container>
   <app-rooms></app-rooms>
   <app-employee></app-employee>
   This is from ng-content
-</app-container>
+</app-container> -->
 <!-- <div>
   <ng-template #user></ng-template>
 </div> -->
