[learn]: Accessing route parameters

--- a/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
@@ -28,11 +28,17 @@
             <td>{{room.checkinTime | date :'medium' }}</td>
             <td>{{room.rating | number: '2.4-5' }}</td>
             <td>
-                <button 
+                <!-- <button 
                 class="btn btn-primary"
                 (click)="selectRoom(room)"
+                routerLink="/rooms/'${room.roomNumber'}"
                 >
                 Select
+                </button> -->
+                <button 
+                routerLink="/rooms/{{room.roomNumber}}"
+                class="btn btn-primary">
+                    Book
                 </button>
             </td>
         </tr>
