--- a/Angular/hotelinventoryapp/src/app/notfound/notfound.component.html
+++ b/Angular/hotelinventoryapp/src/app/notfound/notfound.component.html
@@ -1,1 +1,16 @@
-<h1>The resource you are looking for does not exist</h1>
+<div class="container err-container">
+    <div>
+        <h1>Oops! This page doesn’t exist.</h1>
+        <p>
+            We’re sorry, but we couldn’t find the page you were looking for. It might have been moved, deleted, or mistyped.
+            Don’t worry, you can still find what you need on our website. Here are some options to help you get back on track:
+        </p>
+        <ul>
+            <li>Go back to the previous page and try another link.</li>
+            <li>Visit our homepage and explore our latest features and offers.</li>
+        </ul>
+    </div>
+    <div class="err-img-container">
+        <img src="assets/404.gif" alt="Page Not found">
+    </div>
+</div>
