--- a/Angular/hotelinventoryapp/src/app/login/login.component.html
+++ b/Angular/hotelinventoryapp/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <form action="" (ngSubmit)="login()">
     <div class="form-group">
-        <input appHover color="green" type="email" name="email" [(ngModel)]="email" placeholder="Provide your user email" />
+        <input appHover="green" type="email" name="email" [(ngModel)]="email" placeholder="Provide your user email" />
     </div>
     <div class="form-group">
-        <input appHover color="steelblue" type="password" name="password" [(ngModel)]="password" placeholder="Enter your password" />
+        <input appHover="steelblue" type="password" name="password" [(ngModel)]="password" placeholder="Enter your password" />
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">
