[learn]: nested and children routes

--- a/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -57,3 +57,5 @@ Number of Rooms
     <div *ngSwitchCase="'blue'">blue</div>
     <div *ngSwitchDefault>No color is correct</div>
 </div>
+
+<router-outlet></router-outlet>
