--- a/Angular/hotelinventoryapp/src/app/booking/booking.component.html
+++ b/Angular/hotelinventoryapp/src/app/booking/booking.component.html
@@ -1,1 +1,126 @@
-<p>booking works!</p>
+{{ bookingForm.value | json }}
+{{ bookingForm.pristine | json }}
+{{ bookingForm.dirty | json }}
+<!-- <br> -->
+
+<form action="" 
+class="example-form" 
+[formGroup]="bookingForm"
+(ngSubmit)="addBooking()"
+>
+    <mat-form-field class="example-full-width">
+        <mat-label>Room Id</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="roomId">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest Email</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestEmail">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Check-in Date</mat-label>
+            <input 
+            matInput
+            formControlName="checkinDate"
+            [matDatepicker]="picker">
+            <mat-hint>
+                MM/DD/YYYY
+            </mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <!-- <mat-form-field class="example-full-width">
+        <mat-label>Check-out Date</mat-label>
+            <input 
+            matInput
+            formControlName="checkoutDate"
+            [matDatepicker]="picker">
+            <mat-hint>
+                MM/DD/YYYY
+            </mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field> -->
+    <mat-form-field class="example-full-width">
+        <mat-label>Booking Status</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="bookingStatus">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Booking Amount</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="bookingAmount">
+    </mat-form-field>
+
+    <div formGroupName="address">
+        <mat-accordion class="example-headers-align" multi>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Address
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+          
+              <mat-form-field class="example-full-width">
+                <mat-label>Address Line 1</mat-label>
+                <input matInput placeholder="Address Line 1" formControlName="addressLine1">
+              </mat-form-field>
+          
+              <mat-form-field class="example-full-width">
+                <mat-label>Address Line 2</mat-label>
+                <input matInput placeholder="Address Line 2" formControlName="addressLine2">
+              </mat-form-field>
+
+              <mat-form-field class="example-full-width">
+                <mat-label>City</mat-label>
+                <input matInput placeholder="City" formControlName="city">
+              </mat-form-field>
+              
+              <mat-form-field class="example-full-width">
+                <mat-label>State</mat-label>
+                <input matInput placeholder="State" formControlName="state">
+              </mat-form-field>
+              
+              <mat-form-field class="example-full-width">
+                <mat-label>Country</mat-label>
+                <input matInput placeholder="Country" formControlName="country">
+              </mat-form-field>
+          
+            </mat-expansion-panel>
+        </mat-accordion>
+    </div>
+
+
+    <div>
+        <button mat-raised-button color="primary">Book</button>
+    </div>
+    <!-- <mat-form-field class="example-full-width">
+        <mat-label>Booking Date</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="bookingDate">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Mobile Number</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="mobileNumber">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest Name</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestName">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest Address</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestAddress">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest City</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestCity">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest State</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestState">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest Country</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestCountry">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Guest Zip Code</mat-label>
+        <input matInput placeholder="Ex. 2" formControlName="guestZipCode">
+    </mat-form-field> -->
+</form>
