[learn]: Reactive Forms->formArray, dynamically add/remove form controls, remove formArraycontrols

--- a/Angular/hotelinventoryapp/src/app/app-nav/app-nav.component.html
+++ b/Angular/hotelinventoryapp/src/app/app-nav/app-nav.component.html
@@ -9,6 +9,8 @@
       <a mat-list-item routerLink="/employee">Employee</a>
       <a mat-list-item routerLink="/rooms/add">Add Room</a>
       <a mat-list-item routerLink="booking">Bookings</a>
+      <!-- <a mat-list-item routerLink="booking">Action</a> -->
+      <button mat-raised-button color="primary">Action</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
