[learn]: patchVaue, setValue, updateOn, valueChanges, switchMap, mergeMap, exhaustMap rxjs operators

--- a/Angular/hotelinventoryapp/src/app/booking/booking.component.html
+++ b/Angular/hotelinventoryapp/src/app/booking/booking.component.html
@@ -60,6 +60,10 @@ class="example-form"
         <input matInput placeholder="Ex. 2" formControlName="bookingAmount">
     </mat-form-field>
     <mat-form-field class="example-full-width">
+        <mat-label>Mobile Number</mat-label>
+        <input matInput placeholder="Mobile Number" formControlName="mobileNumber">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
         <mat-label>Guest Name</mat-label>
         <input #guestName matInput placeholder="Guest Name" formControlName="guestName">
         <!-- {{bookingForm.get('guestName')?.errors | json}} -->
