--- a/Angular/hotelinventoryapp/src/app/rooms/rooms-add/rooms-add.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms-add/rooms-add.component.html
@@ -1,11 +1,11 @@
 
-{{ roomsForm.pristine | json }}
-{{ roomsForm.valid | json }}
+<!-- {{ roomsForm.pristine | json }}
+{{ roomsForm.valid | json }} -->
 <!-- {{ roomsForm.value | json }} -->
-{{ roomsForm.errors | json }}
+<!-- {{ roomsForm.errors | json }}
 {{ roomsForm.dirty | json}}
 
-{{ room | json }}
+{{ room | json }} -->
 
 
 <div *ngIf="successMessage !== ''" class="alert alert-success">
