--- a/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
@@ -36,9 +36,9 @@
                 Select
                 </button> -->
                 <button 
-                routerLink="/rooms/{{room.roomNumber}}"
+                routerLink="/booking"
                 class="btn btn-primary">
-                    Book
+                    Book Room
                 </button>
             </td>
         </tr>
