--- a/Angular/hotelinventoryapp/src/styles.scss
+++ b/Angular/hotelinventoryapp/src/styles.scss
@@ -1,3 +1,5 @@
+@import url('~bootstrap/dist/css/bootstrap.min.css');
+
 /* You can add global styles to this file, and also import other style files */
 .even {
     background-color: aqua;
