--- a/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
@@ -36,7 +36,7 @@
                 Select
                 </button> -->
                 <button 
-                routerLink="/booking"
+                routerLink="/booking/{{room.roomNumber}}"
                 class="btn btn-primary">
                     Book Room
                 </button>
