[learn]: filtering prices using custom pipe

--- a/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/Angular/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
@@ -18,7 +18,7 @@
         </tr>
         <tr 
         [ngClass]="e ? 'even' : 'odd'"
-        *ngFor="let room of rooms; let e=even; let o=odd; let i=index">
+        *ngFor="let room of rooms | filter : price; let e=even; let o=odd; let i=index">
             <td>{{i}}</td>
             <td>{{e ? "Even": "Odd"}}</td>
             <td>{{room.roomNumber}}</td>
