--- a/Angular/hotelinventoryapp/src/app/booking/booking.component.html
+++ b/Angular/hotelinventoryapp/src/app/booking/booking.component.html
@@ -15,7 +15,7 @@
   [formGroup]="bookingForm"
   (ngSubmit)="addBooking()"
 >
-    <button mat-raised-button (click)="openDialog('0ms', '0ms')">Open dialog without animation</button>
+    <!-- <button mat-raised-button (click)="openDialog('0ms', '0ms')">Open dialog without animation</button> -->
     <mat-form-field class="example-full-width">
         <mat-label>Room Id</mat-label>
         <input matInput placeholder="Ex. 2" formControlName="roomId">
