--- a/Angular/hotelinventoryapp/src/app/app-nav/app-nav.component.html
+++ b/Angular/hotelinventoryapp/src/app/app-nav/app-nav.component.html
@@ -8,9 +8,13 @@
       <a mat-list-item routerLink="/rooms">Rooms</a>
       <a mat-list-item routerLink="/employee">Employee</a>
       <a mat-list-item routerLink="/rooms/add">Add Room</a>
-      <a mat-list-item routerLink="booking">Bookings</a>
+      <a mat-list-item routerLink="/booking">Bookings</a>
+      <a mat-list-item routerLink="/comments">Comments</a>
       <!-- <a mat-list-item routerLink="booking">Action</a> -->
-      <button mat-raised-button color="primary">Action</button>
+      <!-- <button [matBadge]="message$ | async" 
+      matBadgePosition="before"
+      matBadgeColor="accent"
+      color="primary">Action</button> -->
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
